<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.pot</groupId>
        <artifactId>zing</artifactId>
        <version>${revision}</version>
    </parent>
    <artifactId>auth</artifactId>
    <name>auth</name>
    <description>auth</description>
    <packaging>pom</packaging>
    <developers>
        <developer>
            <name>pot</name>
            <email>yecao.sacu@gmail.com</email>
        </developer>
    </developers>
    <properties>
        <java.version>21</java.version>
    </properties>
    <modules>
        <module>auth-facade</module>
        <module>auth-service</module>
    </modules>

</project>
